Add main section with hero and project overview

--- a/index.html
+++ b/index.html
@@ -85,6 +85,52 @@
           </p>  
         </div>
       </header>
+
+      <main>
+        <div class="top-bar">
+          <div class="hero">
+            <div class="hero-pic">
+              <img src="/image/team-1.jpg" alt="profile picture">
+            </div>
+
+            <div class="greeting">
+              <p class="greeting-text one">Hi there,</p>
+              <p class="greeting-text two">John Doe (@johndoe)</p>
+            </div>
+          </div>
+
+          <div class="hero-buttons">
+            <div class="new">
+              <button class="button">New</button>
+            </div>
+
+            <div class="upload">
+              <button class="button">Upload</button>
+            </div>
+
+            <div class="share">
+              <button class="button">Share</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="main-content">
+          <div class="your-projects">
+            <h1>Your Projects</h1>
+            <div class="project-items">
+              <div class="project-one">
+                <p class="project-header">Super Cool Project</p>
+                <p class="project-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                  Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                  Ut enim ad minim veniam, quis nostrud exercitation 
+                  ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
 
     
