Refactor project section and update styles for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -115,17 +115,114 @@
         </div>
 
         <div class="main-content">
-          <div class="your-projects">
-            <h1>Your Projects</h1>
+          <div class="my-projects">
+            <h1>My Projects</h1>
             <div class="project-items">
-              <div class="project-one">
-                <p class="project-header">Super Cool Project</p>
-                <p class="project-description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                  Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                  Ut enim ad minim veniam, quis nostrud exercitation 
-                  ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
+              <div class="project-container one">
+                <div class="project-header pro-one">
+                  <p>Super Cool Project</p>
+                </div>
+                <div class="project-description pro-one">
+                  <p>
+                    This card exists purely to make your layout look busy and professional. 
+                    No actual functionality here. Just pixels pretending to do something important. 
+                    If you stare long enough, you might even feel like a developer.
+                  </p>
+                </div>
+                <div class="project-icon pro-one">
+                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/github.svg" alt="">
+                </div>
+              </div>
+              <div class="project-container two">
+                <div class="project-header pro-two">
+                  <p>Mind-Blowing App</p>
+                </div>
+                <div class="project-description pro-two">
+                  <p>
+                    This app is as unresponsive as it gets. Buttons don’t work, animations are frozen, 
+                    and it may crash if you blink too fast. 
+                    But don’t worry, that’s fine. It’s only here to fill the layout and make your webpage look “busy.” 
+                    Functionality is strictly optional..
+                  </p>
+                </div>
+                <div class="project-icon pro-two">
+                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/github.svg" alt="">
+                </div>
+              </div>
+              <div class="project-container three">
+                <div class="project-header pro-three">
+                  <p>Revolutionary Thing</p>
+                </div>
+                <div class="project-description pro-three">
+                  <p>
+                    Here we have a revolutionary concept that solves problems nobody asked about. 
+                    It comes fully equipped with static page, some random images, 
+                    and the faint hope that someone will click on it and be impressed. Spoiler: they won’t.
+                </div>
+                <div class="project-icon pro-three">
+                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/github.svg" alt="">
+                </div>
+              </div>
+
+              <div class="project-container four">
+                <div class="project-header pro-four">
+                  <p>Incredible Feature</p>
+                </div>
+                <div class="project-description pro-four">
+                  <p>
+                    If you were expecting actual features, this card will disappoint. 
+                    It contains a description that rambles, talks about imaginary functionality, 
+                    and serves as a reminder that sometimes a project is just a box with text. 
+                    A very stylish box, though.e.
+                  </p>
+                </div>
+                <div class="project-icon pro-four">
+                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/github.svg" alt="">
+                </div>
+              </div>
+
+              <div class="project-container five">
+                <div class="project-header pro-five">
+                  <p>Ultimate Tool</p>
+                </div>
+                <div class="project-description pro-five">
+                  <p>
+                    Congratulations! You’ve reached the ultimate tool, 
+                    which is mostly ultimate in name only. Its capabilities include taking up space, looking fancy, 
+                    and providing a false sense of accomplishment for anyone browsing the page. Use responsibly.
+                  </p>
+                </div>
+                <div class="project-icon pro-five">
+                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/github.svg" alt="">
+                </div>
+              </div>
+
+              <div class="project-container six">
+                <div class="project-header pro-six">
+                  <p>Amazing Idea</p>
+                </div>
+                <div class="project-description pro-six">
+                  <p>
+                    Imagine a groundbreaking app that changes the world. Now forget about it—this card 
+                    is just filler text to avoid empty white space. 
+                    It’s ambitious in theory, useless in practice, and perfect for pretending you have a project portfolio.
+                  </p>
+                </div>
+                <div class="project-icon pro-six">
+                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
+                  <img class="project-img" src="/image/github.svg" alt="">
+                </div>
               </div>
             </div>
           </div>
