Refactor code structure for improved readability and maintainability. Project Finished, with room to improvement

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Social Dashboard</title>
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
@@ -76,12 +76,12 @@
         </div>
 
         <div class="profile-pic">
-          <img src="/image/team-1.jpg" alt="profile picture">
+          <img src="/image/bran-win-game-of-thrones-1553027002.avif" alt="profile picture">
         </div>
 
         <div class="profile-name">
           <p>
-            John Doe
+            Bran Stark
           </p>  
         </div>
       </header>
@@ -90,12 +90,12 @@
         <div class="top-bar">
           <div class="hero">
             <div class="hero-pic">
-              <img src="/image/team-1.jpg" alt="profile picture">
+              <img src="/image/bran-win-game-of-thrones-1553027002.avif" alt="profile picture">
             </div>
 
             <div class="greeting">
               <p class="greeting-text one">Hi there,</p>
-              <p class="greeting-text two">John Doe (@johndoe)</p>
+              <p class="greeting-text two">Bran Stark (@BrandonStark)</p>
             </div>
           </div>
 
@@ -115,114 +115,235 @@
         </div>
 
         <div class="main-content">
-          <div class="my-projects">
-            <h1>My Projects</h1>
+          <div class="latest-post">
+            <h1 class="main-h1">Latest Post</h1>
             <div class="project-items">
               <div class="project-container one">
                 <div class="project-header pro-one">
-                  <p>Super Cool Project</p>
+                  <p>Jon Snow</p>
                 </div>
                 <div class="project-description pro-one">
                   <p>
-                    This card exists purely to make your layout look busy and professional. 
-                    No actual functionality here. Just pixels pretending to do something important. 
-                    If you stare long enough, you might even feel like a developer.
+                    I keep getting told I know nothing, yet the North keeps needing me. 
+                    Between White Walkers, politics, and people who can’t decide anything, 
+                    I mostly brood alone. 
+                    Can a man get a break, or is my destiny always cold and tragic? Winter is HERE. 
+                    #NorthProblems #IDontKnow #WinterIsHere
                   </p>
                 </div>
                 <div class="project-icon pro-one">
-                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/github.svg" alt="">
+                  <img class="project-img" src="/image/heart-outline.svg" alt="">
+                  <img class="project-img" src="/image/bookmark-outline.svg" alt="">
+                  <img class="project-img" src="/image/share-outline.svg" alt="">
                 </div>
               </div>
               <div class="project-container two">
                 <div class="project-header pro-two">
-                  <p>Mind-Blowing App</p>
+                  <p>Daenerys Targaryen</p>
                 </div>
                 <div class="project-description pro-two">
                   <p>
-                    This app is as unresponsive as it gets. Buttons don’t work, animations are frozen, 
-                    and it may crash if you blink too fast. 
-                    But don’t worry, that’s fine. It’s only here to fill the layout and make your webpage look “busy.” 
-                    Functionality is strictly optional..
+                    Dragons, armies, and cities that need freeing… all before breakfast. 
+                    Sometimes I wonder if the world can handle my idea of justice or my fire. But I will rise no matter what, 
+                    because history remembers the bold. Also, dragons are messy, and flying them is exhausting
                   </p>
                 </div>
                 <div class="project-icon pro-two">
-                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/github.svg" alt="">
+                  <img class="project-img" src="/image/heart-outline.svg" alt="">
+                  <img class="project-img" src="/image/bookmark-outline.svg" alt="">
+                  <img class="project-img" src="/image/share-outline.svg" alt="">
                 </div>
               </div>
               <div class="project-container three">
                 <div class="project-header pro-three">
-                  <p>Revolutionary Thing</p>
+                  <p>Arya Stark</p>
                 </div>
                 <div class="project-description pro-three">
                   <p>
-                    Here we have a revolutionary concept that solves problems nobody asked about. 
-                    It comes fully equipped with static page, some random images, 
-                    and the faint hope that someone will click on it and be impressed. Spoiler: they won’t.
+                    Names, faces, revenge. The list grows faster than most people’s patience. 
+                    I move quietly, strike unexpectedly, and disappear entirely if necessary. 
+                    Don’t worry, I’m not angry… just thorough. If you’re on the list, maybe blink twice.
                 </div>
                 <div class="project-icon pro-three">
-                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/github.svg" alt="">
+                  <img class="project-img" src="/image/heart-outline.svg" alt="">
+                  <img class="project-img" src="/image/bookmark-outline.svg" alt="">
+                  <img class="project-img" src="/image/share-outline.svg" alt="">
                 </div>
               </div>
 
               <div class="project-container four">
                 <div class="project-header pro-four">
-                  <p>Incredible Feature</p>
+                  <p>Cersei Lannister</p>
                 </div>
                 <div class="project-description pro-four">
                   <p>
-                    If you were expecting actual features, this card will disappoint. 
-                    It contains a description that rambles, talks about imaginary functionality, 
-                    and serves as a reminder that sometimes a project is just a box with text. 
-                    A very stylish box, though.e.
+                    Power is the only thing that matters. Family, loyalty, 
+                    fear.They are all tools to be wielded carefully. 
+                    I will do whatever it takes to protect my children and my throne, 
+                    and anyone who stands in my way will regret it. Politics is a deadly game, and I always play to win.
                   </p>
                 </div>
                 <div class="project-icon pro-four">
-                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/github.svg" alt="">
+                  <img class="project-img" src="/image/heart-outline.svg" alt="">
+                  <img class="project-img" src="/image/bookmark-outline.svg" alt="">
+                  <img class="project-img" src="/image/share-outline.svg" alt="">
                 </div>
               </div>
 
               <div class="project-container five">
                 <div class="project-header pro-five">
-                  <p>Ultimate Tool</p>
+                  <p>Jamie Lannister</p>
                 </div>
                 <div class="project-description pro-five">
                   <p>
-                    Congratulations! You’ve reached the ultimate tool, 
-                    which is mostly ultimate in name only. Its capabilities include taking up space, looking fancy, 
-                    and providing a false sense of accomplishment for anyone browsing the page. Use responsibly.
+                    Kingslayer, swordsman, sometimes hero, sometimes villain… mostly 
+                    just trying to survive the chaos my family creates. 
+                    Honor is complicated when loyalty and love get tangled up with duty. 
+                    I fight, I protect, I regret, and occasionally I smirk at the absurdity of it all.
                   </p>
                 </div>
                 <div class="project-icon pro-five">
-                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/github.svg" alt="">
+                  <img class="project-img" src="/image/heart-outline.svg" alt="">
+                  <img class="project-img" src="/image/bookmark-outline.svg" alt="">
+                  <img class="project-img" src="/image/share-outline.svg" alt="">
                 </div>
               </div>
 
               <div class="project-container six">
                 <div class="project-header pro-six">
-                  <p>Amazing Idea</p>
+                  <p>Petyr Baelish</p>
                 </div>
                 <div class="project-description pro-six">
                   <p>
-                    Imagine a groundbreaking app that changes the world. Now forget about it—this card 
-                    is just filler text to avoid empty white space. 
-                    It’s ambitious in theory, useless in practice, and perfect for pretending you have a project portfolio.
+                    Chaos is a ladder, and I climb it one careful step at a time. 
+                    Trust no one, use everyone, and always have a plan that no one else sees. 
+                    Everyone underestimates me, and that’s exactly how I like it. Power isn’t given. it’s taken.
                   </p>
                 </div>
                 <div class="project-icon pro-six">
-                  <img class="project-img" src="/image/star-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/eye-plus-outline.svg" alt="">
-                  <img class="project-img" src="/image/github.svg" alt="">
+                  <img class="project-img" src="/image/heart-outline.svg" alt="">
+                  <img class="project-img" src="/image/bookmark-outline.svg" alt="">
+                  <img class="project-img" src="/image/share-outline.svg" alt="">
                 </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="announcements">
+            <h1 class="main-h1">Announcements</h1>
+            <div class="announcements-list">
+              <div class="announcements-text">
+                <p class="announcements-header">The North Remains on High Alert</p>
+                <p class="announcements-desc">Strange activity near the Wall has led to 
+                  stronger defenses and increased patrols across the North.
+                </p>
+              </div>
+              <hr>
+              <div class="announcements-text">
+                <p class="announcements-header">Daenerys Targaryen Sets Sail for Westeros</p>
+                <p class="announcements-desc">A dragon-bannered fleet has been spotted 
+                  crossing the Narrow Sea toward Westeros.
+                </p>
+              </div>
+              <hr>
+              <div class="announcements-text">
+                <p class="announcements-header">Cersei Lannister Crowned Queen of the Seven Kingdoms</p>
+                <p class="announcements-desc desc-last">Cersei of House Lannister, First of Her Name, 
+                  has officially taken the Iron Throne, 
+                  becoming the first woman to rule the Seven Kingdoms in her own right.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="trending">
+            <h1 class="main-h1">Noble Houses</h1>
+            <div class="houses-list">
+              <div class="houses-content">
+                <div class="houses-img">
+                  <img src="/image/stark.png" alt="">
+                </div>
+                <div class="houses-text">
+                  <p class="house-name">House Stark</p>
+                  <p>Winter Is Coming</p>
+                </div>    
+              </div>
+
+              <div class="houses-content">
+                <div class="houses-img">
+                  <img src="/image/lannister.png" alt="">
+                </div>
+                <div class="houses-text">
+                  <p class="house-name">House Lannister</p>
+                  <p>Hear Me Roar</p>
+                </div>    
+              </div>
+
+              <div class="houses-content">
+                <div class="houses-img">
+                  <img src="/image/baratheon.png" alt="">
+                </div>
+                <div class="houses-text">
+                  <p class="house-name">House Baratheon</p>
+                  <p>Ours Is The Fury</p>
+                </div>    
+              </div>
+              <div class="houses-content">
+                <div class="houses-img">
+                  <img src="/image/targaryen.png" alt="">
+                </div>
+                <div class="houses-text">
+                  <p class="house-name">House Targaryen</p>
+                  <p>Fire And Blood</p>
+                </div>    
+              </div>
+
+              <div class="houses-content">
+                <div class="houses-img">
+                  <img src="/image/tyrell.png" alt="">
+                </div>
+                <div class="houses-text">
+                  <p class="house-name">House Tyrell</p>
+                  <p>Growing Strong</p>
+                </div>    
+              </div>
+
+              <div class="houses-content">
+                <div class="houses-img">
+                  <img src="/image/martell.png" alt="">
+                </div>
+                <div class="houses-text">
+                  <p class="house-name">House Martell</p>
+                  <p>Unbent, Unbroken</p>
+                </div>    
+              </div>
+              <div class="houses-content">
+                <div class="houses-img">
+                  <img src="/image/bolton.png" alt="">
+                </div>
+                <div class="houses-text">
+                  <p class="house-name">House Bolton</p>
+                  <p>Our Blades Are Sharp</p>
+                </div>    
+              </div>
+
+              <div class="houses-content">
+                <div class="houses-img">
+                  <img src="/image/arryn.png" alt="">
+                </div>
+                <div class="houses-text">
+                  <p class="house-name">House Arryn</p>
+                  <p>As High As Honor</p>
+                </div>    
+              </div>
+              <div class="houses-content">
+                <div class="houses-img">
+                  <img src="/image/greyjoy.png" alt="">
+                </div>
+                <div class="houses-text">
+                  <p class="house-name">House Greyjoy</p>
+                  <p>We Do Not Sow</p>
+                </div>    
               </div>
             </div>
           </div>
